--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/jest": "^27.4.1",
     "chalk": "^4.0.1",
+    "commander": "^9.2.0",
     "jest": "^27.5.1"
   }
 }
