--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/jest": "^27.4.1",
+    "cfonts": "^2.10.1",
     "chalk": "^4.0.1",
     "commander": "^9.2.0",
     "jest": "^27.5.1"
