chore: added commitlint with husky

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "subx": "./bin/index.js"
   },
   "devDependencies": {
-    "eslint": "^8.14.0"
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "eslint": "^8.14.0",
+    "husky": "^7.0.4"
   }
 }
