--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "eslint": "^8.14.0",
+    "gulp": "^4.0.2",
     "husky": "^7.0.4"
   }
 }
