chore: add initial implemenation of inquirer to install the software needed in prerequisites

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cfonts": "^2.10.1",
     "chalk": "^4.0.1",
     "commander": "^9.2.0",
+    "inquirer": "^8.2.4",
     "jest": "^27.5.1"
   },
   "bin": {
