chore: add gulp minifying for bin

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "eslint": "^8.14.0",
     "gulp": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "husky": "^7.0.4"
   }
 }
